wlr_cursor doesn't remember the image
- Call
wlr_cursor_set_image
orwlr_cursor_set_surface
- Plug a new output
- Output has cursor unset, instead
wlr_cursor
should have set it
This is a little bit tricky because wlr_cursor_set_image
takes a scale
argument and only applies it to outputs which has the provided scale. So with the current API we'd need to remember cursor images for all scales.
WIP branch fixing this issue: https://github.com/swaywm/wlroots/compare/master...emersion:cursor-remember